k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
spec:
  selector:
    app: personal-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
